Fix tabstrip edges not redrawing when entering/leaving single tab mode

BUG=860859
R=pkasting

Change-Id: I9766d6c175fa6bdd8906c58448bf94ae85a17141
Reviewed-on: https://chromium-review.googlesource.com/1135512
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574645}
Former-commit-id: 901634eeb056e61914c0b70b43adff655d156c2b